<resources>
    <string name="app_name">PheramorProject</string>
    <string name="email_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email_error_message">Invalid email address!</string>
    <string name="invalid_password_error_message">Password must have at least one lowercase letter, one uppercase letter, one digit and at least 8 characters long.</string>
    <string name="non_matching_passwords_error_message">Passwords do not match!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height_feet">Height Feet</string>
    <string name="height_inches">Height Inches</string>
    <string name="zipcode">Zip Code</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date Of Birth</string>
    <string name="race">Race (Optional)</string>
    <string name="religion">Religion (Optional)</string>
    <string name="next">Next</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="east_asian">East Asian</string>
    <string name="south_asian">South Asian</string>
    <string name="latino">Latino</string>
    <string name="mixed">Mixed</string>
    <string name="prefer_not_to_say">Prefer Not To Say</string>
    <string name="other">Other</string>
    <string name="agnostic">Agnostic</string>
    <string name="atheist">Atheist</string>
    <string name="hindu">Hindu</string>
    <string name="buddhist">Buddhist</string>
    <string name="jewish">Jewish</string>
    <string name="christian">Christian</string>
    <string name="muslim">Muslim</string>
    <string name="first_name_error_message">First name should be atleast 2 characters and consists of all letters.</string>
    <string name="last_name_error_message">Last name should be atleast 2 characters and consists of all letters.</string>
    <string name="bad_height_error_message">Please make sure that your feet has proper and realistic feet and inches!</string>
    <string name="zip_code_error_message">Zip codes should have 5 digits!</string>
    <string name="date_of_birth_error_message">You have to be 18 years or older to sign up!</string>
    <string name="empty_height_error_message">Please fill in your height!</string>
    <string name="empty_gender_error_message">Please select a gender!</string>
    <string name="empty_date_of_birth_error_message">Please enter your date of birth!</string>
    <string name="log_in">Log In</string>
    <string name="log_in_message">Log in is not implemented. Please use sign up!</string>
    <string name="signUp">Sign Up</string>
    <string name="your_interests">Your Interests</string>
    <string name="interest_age_min">Min Age</string>
    <string name="interest_age_max">Max Age</string>
    <string name="both">Both</string>
    <string name="empty_interest_gender_message">Gender is empty!</string>
    <string name="empty_interest_age_message">Please fill in the min and max ages that you are interested in!</string>
    <string name="bad_interest_age_message">Please make sure that min age is at least 18 and min age is not greater than max age!</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="profile_picture_not_selected_message">Please select a profile picture first!</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="interest_gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Both</item>
    </string-array>
</resources>
