<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="40dp">

    <TextView
        android:id="@+id/black_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/white_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/black_textview"
        android:text="@string/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/east_asian_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/white_textview"
        android:text="@string/east_asian"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/south_asian_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/east_asian_textview"
        android:text="@string/south_asian"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/latino_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/south_asian_textview"
        android:text="@string/latino"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/mixed_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/latino_textview"
        android:text="@string/mixed"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/prefer_not_to_say_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/mixed_textview"
        android:text="@string/prefer_not_to_say"
        android:textSize="18sp"/>

</android.support.constraint.ConstraintLayout>