<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="40dp">

    <TextView
        android:id="@+id/male_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/male"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/female_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/male_textview"
        android:text="@string/female"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/both_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/female_textview"
        android:text="@string/both"
        android:textSize="18sp"/>

</android.support.constraint.ConstraintLayout>