<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.SignUpUserInterestActivity">

    <TextView
        android:id="@+id/your_interests_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_interests"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/interest_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/your_interests_textview">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/interest_gender_edittext"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:inputType="none"
            android:clickable="false"
            android:longClickable="false"
            android:drawableRight="@drawable/baseline_expand_more_black_18dp"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/interest_age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/interest_gender_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/interest_age_min_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:hintEnabled="false"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/interest_age_min_edittext"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:hint="@string/interest_age_min"
                android:inputType="number"
                android:maxLength="2"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/interest_age_max_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/interest_age_max_edittext"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:hint="@string/interest_age_max"
                android:inputType="number"
                android:maxLength="2"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_btn"
        style="@style/MySignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="clickNext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"/>

</android.support.constraint.ConstraintLayout>